src/test/ui/type/type-params-in-different-spaces-1.stderr
error[E0308]: mismatched types
  --> $DIR/type-params-in-different-spaces-1.rs:5:17
   |
LL |         *self + rhs
   |                 ^^^ expected Self, found type parameter
   |
   = note: expected type `Self`
              found type `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
